--- a/recursos.qrc
+++ b/recursos.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/icons">
-        <file>icons/logo.svg</file>
-        <file>icons/logo.png</file>
+        <file alias="logo">icons/logo.png</file>
     </qresource>
 </RCC>
