--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,9 +76,16 @@
     <addaction name="separator"/>
     <addaction name="actionjavascript"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menu_Archivo"/>
    <addaction name="menuVer"/>
    <addaction name="menuFavoritos"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dock_markets">
@@ -266,6 +273,11 @@
    </property>
    <property name="shortcut">
     <string>F4</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
    </property>
   </action>
  </widget>
