--- a/dialogaddmarket.ui
+++ b/dialogaddmarket.ui
@@ -70,6 +70,11 @@
           <string comment="binsance">Binance</string>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string comment="kuku">Kucoin</string>
+         </property>
+        </item>
        </widget>
       </item>
      </layout>
