--- a/dialogaddmarket.ui
+++ b/dialogaddmarket.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Añadir mercado</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -23,7 +23,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Introduce el par:</string>
+         <string>Introduce el mercado:</string>
         </property>
        </widget>
       </item>
