--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,6 +26,9 @@
    <iconset resource="recursos.qrc">
     <normaloff>:/icons/logo</normaloff>:/icons/logo</iconset>
   </property>
+  <property name="locale">
+   <locale language="Spanish" country="Spain"/>
+  </property>
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>false</bool>
   </property>
@@ -54,7 +57,7 @@
    </property>
    <widget class="QMenu" name="menuView">
     <property name="title">
-     <string>&amp;View</string>
+     <string>&amp;Ver</string>
     </property>
     <addaction name="actionMarkets"/>
     <addaction name="separator"/>
@@ -67,11 +70,13 @@
      <string>&amp;Archivo</string>
     </property>
     <addaction name="separator"/>
-    <addaction name="actionSalir"/>
+    <addaction name="actionOptions"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuDebug">
     <property name="title">
-     <string>&amp;Debug</string>
+     <string>Depurar</string>
     </property>
     <addaction name="separator"/>
     <addaction name="actionjavascript"/>
@@ -79,7 +84,7 @@
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>Ayuda</string>
     </property>
     <addaction name="actionAbout"/>
    </widget>
@@ -89,7 +94,7 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QDockWidget" name="dock_markets">
+  <widget class="QDockWidget" name="dockMercados">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -112,7 +117,7 @@
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle">
-    <string>Markets (F4)</string>
+    <string>Mercados</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -132,7 +137,7 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
-      <widget class="QLineEdit" name="ed_filtro">
+      <widget class="QLineEdit" name="edFilter">
        <property name="placeholderText">
         <string>Filtrar...</string>
        </property>
@@ -142,7 +147,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QListWidget" name="list_markets">
+      <widget class="QListWidget" name="listMarkets">
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
@@ -195,9 +200,12 @@
     </layout>
    </widget>
   </widget>
-  <action name="actionSalir">
+  <action name="actionExit">
    <property name="text">
     <string>Salir</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="actionFullscreen">
@@ -205,7 +213,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Fullscreen</string>
+    <string>Pantalla completa</string>
    </property>
    <property name="shortcut">
     <string>F11</string>
@@ -224,7 +232,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Markets</string>
+    <string>Mercados</string>
    </property>
    <property name="shortcut">
     <string>F4</string>
@@ -232,7 +240,7 @@
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>Acerca de...</string>
    </property>
   </action>
   <action name="actionDebug">
@@ -240,7 +248,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Debug</string>
+    <string>Depurar</string>
    </property>
    <property name="shortcut">
     <string>F12</string>
@@ -249,6 +257,11 @@
   <action name="actionTest">
    <property name="text">
     <string>Test</string>
+   </property>
+  </action>
+  <action name="actionOptions">
+   <property name="text">
+    <string>Opciones...</string>
    </property>
   </action>
  </widget>
@@ -265,7 +278,7 @@
  </resources>
  <connections>
   <connection>
-   <sender>actionSalir</sender>
+   <sender>actionExit</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
    <slot>close()</slot>
@@ -283,7 +296,7 @@
   <connection>
    <sender>actionMarkets</sender>
    <signal>toggled(bool)</signal>
-   <receiver>dock_markets</receiver>
+   <receiver>dockMercados</receiver>
    <slot>setVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
